--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,18 +29,18 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build with pyinstaller
-        run: pyinstaller --hidden-import zeroconf._utils.ipaddress --hidden-import zeroconf._handlers.answers --hidden-import=clr --add-data "./img/logo.png;img" --onefile --distpath ./build --name=vrc-vrphone main.py
+        run: pyinstaller --hidden-import zeroconf._utils.ipaddress --hidden-import zeroconf._handlers.answers --hidden-import=clr --add-data "./img/logo.png;img" --noconsole --onefile --distpath ./build --name=vrc-vrphone main.py
 
       - name: Deploy EXE
         uses: actions/upload-artifact@v3
         with:
-          name: vrphone
+          name: vrc-vrphone
           path: ./build/vrc-vrphone.exe
           if-no-files-found: error
 
 
   release:
-    needs: build
+    needs: Build
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -51,11 +51,6 @@ jobs:
         with:
           name: vrc-vrphone
           path: artifact/vrc-vrphone
-
-      - uses: actions/download-artifact@v3
-        with:
-          name: VRC_VRPhone
-          path: artifact/VRC_VRPhone
       
       - name: Display structure of downloaded files
         run: ls -R
